Bug 461287 - Can't resize or drag the ruler on Wayland
Summary: Can't resize or drag the ruler on Wayland
Status: RESOLVED FIXED
Alias: None
Product: kruler
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.08.2
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: shenlebantongying
URL:
Keywords: wayland-only
Depends on:
Blocks:
 
Reported: 2022-11-01 11:27 UTC by last.kudwalli@gmail.com
Modified: 2023-03-11 04:00 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 23.04
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description last.kudwalli@gmail.com 2022-11-01 11:27:32 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
I've been using Fedora's main release for the past one year and the issue exists. 
We just have to install it. The issue will be replicated. 
OBSERVED RESULT
the resize and drag don't work as expected. While dragging on the right, the left side moves and some times it's just not responsive to any action.

EXPECTED RESULT
On click and drag in the long end, the scale is supposed to resize


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: Fedora Workstation - Rawhide (Gnome 43 )
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Geoffrey Clements 2022-11-29 14:00:40 UTC
Same problem here:

Operating System: KDE neon 5.26
KDE Plasma Version: 5.26.3
KDE Frameworks Version: 5.100.0
Qt Version: 5.15.7
Kernel Version: 5.15.0-53-generic (64-bit)
Graphics Platform: Wayland
Processors: 8 × Intel® Core™ i7-6700K CPU @ 4.00GHz
Memory: 15.6 GiB of RAM
Graphics Processor: NVIDIA GeForce GTX 1050 Ti/PCIe/SSE2
Comment 2 Geoffrey Clements 2022-12-11 11:40:41 UTC
Fixed in KDE Plasma 5.26.4.
Comment 3 Nate Graham 2023-01-09 02:31:56 UTC
Confirmed.
Comment 4 Nicolas Fella 2023-01-11 13:40:14 UTC
Moving works since KRuler 22.12.

Resizing seeems broken, but I vaguely remember it working too
Comment 5 Bug Janitor Service 2023-02-02 01:46:27 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/kruler/-/merge_requests/19
Comment 6 David Edmundson 2023-03-08 09:46:25 UTC
Git commit 9a2c88a9fca648464688cc107c75b1f82126bb8a by David Edmundson, on behalf of shenleban tongying.
Committed on 08/03/2023 at 09:44.
Pushed by davidedmundson into branch 'master'.

replace localCursorPos() with Qt's methods

* it doesn't work on Wayland
* refactor related code

M  +26   -54   klineal.cpp
M  +4    -9    klineal.h

https://invent.kde.org/graphics/kruler/commit/9a2c88a9fca648464688cc107c75b1f82126bb8a