replace localCursorPos() with Qt's methods

* it doesn't work on Wayland
* refactor related code

BUG: 461287